--- a/apps/web-app/src/styles.scss
+++ b/apps/web-app/src/styles.scss
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.dev/guide/theming
+@use "@angular/material" as mat;
+
+html {
+  @include mat.theme(
+    (
+      color: (
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: -2,
+    )
+  );
+
+  a {
+    color: var(--mat-sys-primary);
+    text-decoration: none;
+
+    &.brand {
+      color: white;
+
+      mat-icon {
+        color: #ffb300;
+      }
+    }
+  }
+} /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  color-scheme: light dark; // use light to make light the default, light dark to use system settings
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+
+  // eventually I'd like to move to setting picker, but as a start, use system settings
+  // &.dark-mode {
+  //   color-scheme: dark;
+  // }
+}
+
+:root {
+  @include mat.toolbar-overrides(
+    (
+      container-background-color: #00458f,
+      container-text-color: white
+    )
+  );
+}
