--- a/apps/web-app/src/app/app.scss
+++ b/apps/web-app/src/app/app.scss
@@ -3,9 +3,8 @@
   display: flex;
   flex-direction: column;
 
-  .container,
-  .navbar {
-    padding: 0.5rem;
+  router-outlet {
+    display: none;
   }
 
   mat-toolbar {
@@ -26,6 +25,7 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
+      box-sizing: border-box;
       padding: 0.5rem;
     }
   }
