--- a/apps/web-app/src/app/features/init/home/home.html
+++ b/apps/web-app/src/app/features/init/home/home.html
@@ -1,1 +1,17 @@
-Welcome to the site!
+<div>
+  <mat-form-field [subscriptSizing]="'dynamic'">
+    <mat-label>Board size</mat-label>
+    <mat-select
+      [(ngModel)]="boardSize"
+      (selectionChange)="resizeBoard($event.value)"
+    >
+      <mat-option [value]="9">3x3</mat-option>
+      <mat-option [value]="16">4x4</mat-option>
+      <mat-option [value]="25">5x5</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button mat-button (click)="scramble()">Scramble</button>
+  <button mat-flat-button (click)="save()">Save</button>
+</div>
+<app-board [cards]="cards"></app-board>
