--- a/apps/web-app/src/app/features/init/home/home.css
+++ b/apps/web-app/src/app/features/init/home/home.css
@@ -9,4 +9,35 @@
     align-items: center;
     gap: 1rem;
   }
+
+  .cells {
+    height: 12rem;
+    overflow: auto;
+  }
+
+  h3 {
+    text-align: center;
+  }
+
+  form.details {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    & > *:first-child {
+        margin-top: 0.5rem;
+    }
+
+    & mat-form-field {
+        width: 98%;
+
+        &:first-child {
+            padding-top: 0.3rem;
+        }
+    }
+  }
+
+  .action-footer {
+    text-align: end;
+  }
 }
