Local board storage, visual improvements, refactors, icons

--- a/apps/web-app/src/app/app.html
+++ b/apps/web-app/src/app/app.html
@@ -2,14 +2,14 @@
 
 <mat-toolbar>
     <a class="brand" [routerLink]="''">
-      <mat-icon>pattern</mat-icon>
+      <img class="icon" src="bingo.svg">
       BINGO TODO
     </a>
     <a>
       @if (!!user) {
-        <button matButton (click)="logout()">Sign Out</button>
+        <button matButton (click)="logout()" disabled>Sign Out</button>
       } @else {
-        <button matButton (click)="login()">Sign In</button>
+        <button matButton (click)="login()" disabled>Sign In</button>
       }
     </a>
 </mat-toolbar>
