--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -1,16 +1,11 @@
-<div
-  [class.three]="mode() === 3"
-  [class.four]="mode() === 4"
-  [class.five]="mode() === 5"
->
-  @for (card of displayedCards(); track idx; let idx = $index) {
-    <mat-card
-        [class.bingo]="card.IsBingo"
-        [class.done]="!!card.CheckedDateUTC"
-        [class.selected]="card.Selected"
-        (click)="checkCard(card)"
-    >
-        <div [matTooltip]="card.Name">{{ previewMode() === 'indicator' ? "" : card.Name }}</div>
-    </mat-card>
+<div [class.three]="mode() === 3" [class.four]="mode() === 4" [class.five]="mode() === 5">
+  @for (card of cards(); track idx; let idx = $index) {
+  <mat-card
+    [class.bingo]="card.IsBingo"
+    [class.done]="!!card.CheckedDateUTC"
+    [class.selected]="card.Selected"
+    (click)="checkCard(card)">
+    <div [matTooltip]="card.Name">{{ previewMode() === "indicator" ? "" : card.Name }}</div>
+  </mat-card>
   }
 </div>
