--- a/apps/web-app/src/app/pages/board-page/board-page.css
+++ b/apps/web-app/src/app/pages/board-page/board-page.css
@@ -5,29 +5,44 @@
 
   div {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+
     &:not(.actions) {
       gap: 0.5rem;
     }
+
     &.actions {
       flex-shrink: 0;
+      margin-left: auto;
+    }
+
+    &.edit {
+      flex-direction: column;
+      gap: 1rem;
+
+      h4 {
+        margin: 0;
+      }
+
+      mat-divider {
+        width: 100%;
+      }
+
+      app-board-details-form {
+        flex-direction: column;
+      }
     }
   }
 
-  h3 {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
+  h1 {
+    font-size: larger;
+    font-weight: 500;
     margin: 0;
-
-    & > span {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .trophy {
