--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.html
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.html
@@ -6,52 +6,22 @@
   #stepper
   (selectionChange)="scrollTo($event)">
   <mat-step [stepControl]="boardForm">
-    <form [formGroup]="boardForm" class="details">
-      <ng-template matStepLabel>Board details</ng-template>
+    <ng-template matStepLabel>Board details</ng-template>
+    <div class="container">
       <app-board [cards]="cardsPreview" [previewMode]="'indicator'"></app-board>
-
-      <mat-form-field [subscriptSizing]="'dynamic'">
-        <mat-label>Board size</mat-label>
-        <mat-select formControlName="BoardSize" (selectionChange)="resizeBoard($event.value)">
-          <mat-option [value]="9">3x3</mat-option>
-          <mat-option [value]="16">4x4</mat-option>
-          <mat-option [value]="25">5x5</mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field [subscriptSizing]="'dynamic'">
-        <mat-label>Game mode</mat-label>
-        <mat-select formControlName="GameMode">
-          <mat-option [value]="'traditional'"
-            ><img class="icon" src="bingo.svg" /> Traditional (1 strike)</mat-option
-          >
-          <mat-option [value]="'todo'"
-            ><img class="icon" src="todo.svg" /> Todo (check all)</mat-option
-          >
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field [subscriptSizing]="'dynamic'">
-        <mat-label>Name</mat-label>
-        <input matInput placeholder="Enter board name" formControlName="Name" />
-      </mat-form-field>
-
-      <mat-form-field [subscriptSizing]="'dynamic'">
-        <mat-label>Visibility</mat-label>
-        <mat-select formControlName="Visibility">
-          <mat-option [value]="'unlisted'" [disabled]="!isLoggedIn">Unlisted</mat-option>
-          <mat-option [value]="'public'" [disabled]="!isLoggedIn">Public</mat-option>
-          <mat-option [value]="'local'">Local</mat-option>
-        </mat-select>
-      </mat-form-field>
+      <app-board-details-form
+        [isLoggedIn]="isLoggedIn"
+        [board]="baseBoard"
+        [createMode]="true"
+        (resizeBoard)="resizeBoard($event)"></app-board-details-form>
 
       <div class="action-footer">
         <button matButton matStepperNext>Next</button>
       </div>
-    </form>
+    </div>
   </mat-step>
   <mat-step [stepControl]="cardsFormArray" label="Board cells">
-    <form class="details">
+    <form class="container">
       <app-board [cards]="cardsPreview" [previewMode]="'indicator'"></app-board>
 
       <div class="cells">
@@ -90,9 +60,9 @@
     @let boardDetails = boardForm.getRawValue();
 
     <ng-template matStepLabel>Done</ng-template>
-    <div class="overview">
+    <div class="container">
       <h3>
-        <img class="icon" src="{{ boardDetails.GameMode === 'todo' ? 'todo' : 'bingo' }}.svg" />
+        <img class="icon" alt="" src="{{ boardDetails.GameMode === 'todo' ? 'todo' : 'bingo' }}.svg" />
         {{ boardDetails.Name || "Untitled Board" }}
       </h3>
       <app-board [cards]="$any(cardsFormArray.getRawValue())" [previewMode]="'preview'"></app-board>
