--- a/apps/web-app/src/app/features/board/board.css
+++ b/apps/web-app/src/app/features/board/board.css
@@ -7,7 +7,7 @@
     --box-size: 2rem;
   }
 
-  &:not(.preview) > div mat-card:hover:not(.done):not(.bingo) {
+  &:not(.preview) > div mat-card:hover:not(.bg-yellow):not(.bg-green) {
     cursor: pointer;
     & div {
       cursor: pointer;
@@ -44,21 +44,6 @@
       justify-content: center;
       padding: 0.4rem;
 
-      &.done {
-        background-color: var(--yellow-primary);
-        color: black;
-      }
-
-      &.bingo {
-        background-color: var(--green-primary);
-        color: white;
-      }
-
-      &.selected {
-        background-color: var(--blue-primary);
-        color: white;
-      }
-
       div {
         cursor: default;
         display: -webkit-box;
@@ -90,7 +75,7 @@
     }
 
     &:not(.indicator) > div.five {
-      --box-size: 4.3rem;
+      --box-size: 5.3rem;
     }
   }
 
