--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -1,9 +1,9 @@
 <div [class.three]="mode() === 3" [class.four]="mode() === 4" [class.five]="mode() === 5">
   @for (card of cards(); track idx; let idx = $index) {
   <mat-card
-    [class.bingo]="card.IsBingo"
-    [class.done]="!!card.CheckedDateUTC"
-    [class.selected]="card.Selected"
+    [class.bg-green]="card.IsBingo"
+    [class.bg-yellow]="!!card.CheckedDateUTC"
+    [class.bg-blue]="card.Selected"
     (click)="checkCard(card)">
     <div [matTooltip]="card.Name">{{ previewMode() === "indicator" ? "" : card.Name }}</div>
   </mat-card>
