--- a/apps/web-app/src/app/features/board-list-view/board-list-view.css
+++ b/apps/web-app/src/app/features/board-list-view/board-list-view.css
@@ -8,7 +8,7 @@
   scroll-padding: 0.5rem;
 
   & mat-card {
-    &:hover:not(.bg-yellow):not(.bg-green) {
+    &:hover:not(.bg-yellow):not(.bg-green):not(.disabled) {
         cursor: pointer;
     }
 
