--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.html
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.html
@@ -25,9 +25,9 @@
       <app-board [cards]="cardsPreview" [previewMode]="'indicator'"></app-board>
 
       <div class="cells">
-        @for (control of cardsFormArray.controls; track idx; let idx = $index) {
+        @for (control of cardsFormArray.controls; track idx; let idx = $index, last = $last) {
         <ng-container [formGroup]="control">
-          <mat-form-field>
+          <mat-form-field [subscriptSizing]="'dynamic'">
             <mat-label
               >Row {{ Math.ceil((idx + 1) / boardCols) }}, Col
               {{ (idx % boardCols) + 1 }}</mat-label
@@ -45,6 +45,10 @@
               placeholder="Enter something"
               formControlName="Name" />
           </mat-form-field>
+
+          @if(($index + 1) % boardCols === 0 && !last) {
+          <mat-divider></mat-divider>
+          }
         </ng-container>
         }
       </div>
@@ -60,38 +64,44 @@
     @let boardDetails = boardForm.getRawValue();
 
     <ng-template matStepLabel>Done</ng-template>
-    <div class="container">
-      @let switchTo = gridMode() === 'grid' ? 'list' : 'grid'; @let buttonLabel = 'Switch to ' +
-      switchTo + ' view';
+    <div class="overview-container">
+      <div class="container">
+        @let switchTo = gridMode() === 'grid' ? 'list' : 'grid'; @let buttonLabel = 'Switch to ' +
+        switchTo + ' view';
 
-      <div class="title">
-        <img
-          class="icon"
-          alt=""
-          src="{{ boardDetails.GameMode === 'todo' ? 'todo' : 'bingo' }}.svg" />
-        <h3>
-          {{ boardDetails.Name || "Untitled Board" }}
-        </h3>
-        <button
-          class="view-switch"
-          [matTooltip]="buttonLabel"
-          attr.aria-label="{{ buttonLabel }}"
-          matIconButton
-          (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid'); scrollTo($any({selectedIndex:2}))">
-          <mat-icon>{{ gridMode() === "grid" ? "list" : "grid_on" }}</mat-icon>
-        </button>
-      </div>
+        <div class="title">
+          <img
+            class="icon"
+            alt=""
+            src="{{ boardDetails.GameMode === 'todo' ? 'todo' : 'bingo' }}.svg" />
+          <h3>
+            {{ boardDetails.Name || "Untitled Board" }}
+          </h3>
+          <button
+            class="view-switch"
+            [matTooltip]="buttonLabel"
+            attr.aria-label="{{ buttonLabel }}"
+            matIconButton
+            (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid'); scrollTo($any({selectedIndex:2}))">
+            <mat-icon>{{ gridMode() === "grid" ? "list" : "grid_on" }}</mat-icon>
+          </button>
+        </div>
 
-      @if (gridMode() === 'list') {
-      <app-board-list-view [cards]="$any(cardsFormArray.getRawValue())"></app-board-list-view>
-      } @else {
-      <app-board [cards]="$any(cardsFormArray.getRawValue())" [previewMode]="'preview'"></app-board>
-      }
+        @if (gridMode() === 'list') {
+        <app-board-list-view
+          [cards]="$any(cardsFormArray.getRawValue())"
+          [disabled]="true"></app-board-list-view>
+        } @else {
+        <app-board
+          [cards]="$any(cardsFormArray.getRawValue())"
+          [previewMode]="'preview'"></app-board>
+        }
 
-      <div class="action-footer">
-        <button mat-stroked-button (click)="scramble()">Scramble</button>
-        <button matButton matStepperPrevious>Back</button>
-        <button mat-flat-button (click)="createBoard()">Start</button>
+        <div class="action-footer">
+          <button mat-stroked-button (click)="scramble()">Scramble</button>
+          <button matButton matStepperPrevious>Back</button>
+          <button mat-flat-button (click)="createBoard()">Start</button>
+        </div>
       </div>
     </div>
   </mat-step>
