--- a/apps/web-app/src/app/app.html
+++ b/apps/web-app/src/app/app.html
@@ -1,6 +1,6 @@
 @let user = user$ | async;
 
-<mat-toolbar>
+<mat-toolbar role="banner">
     <a class="brand" [routerLink]="''">
       <img class="icon" src="bingo.svg">
       BINGO TODO
