--- a/apps/web-app/src/app/features/board-details-form/board-details-form.html
+++ b/apps/web-app/src/app/features/board-details-form/board-details-form.html
@@ -20,7 +20,7 @@
         <img class="icon" src="bingo.svg" alt="" /> Traditional (1 strike)
       </mat-option>
       <mat-option [value]="'todo'">
-        <img class="icon" src="todo.svg" alt="" /> Todo (check all)
+        <img class="icon" src="todo.svg" alt="" /> To-do (check all)
       </mat-option>
     </mat-select>
   </mat-form-field>
