--- a/apps/web-app/src/app/features/board/board.css
+++ b/apps/web-app/src/app/features/board/board.css
@@ -1,7 +1,7 @@
 :host {
   /* container: board-container / inline-size; */
 
-  --_board-max-width: 33.5rem;
+  --_board-max-width: 33rem;
   --cell-gap: 0.5rem;
   --box-size: min(
     calc((100cqw / var(--box-number)) - (var(--cell-gap) - 0.1rem)),
@@ -13,12 +13,19 @@
   --box-number: 3;
   --box-max-lines: 5;
 
-  display: grid;
-  grid-template-columns: repeat(var(--box-number), var(--box-size));
-  grid-template-rows: repeat(var(--box-number), var(--box-size));
-  justify-content: center;
-  gap: var(--cell-gap);
   width: fit-content;
+
+  div[role="row"] {
+    display: grid;
+    grid-template-columns: repeat(var(--box-number), var(--box-size));
+    grid-template-rows: repeat(1, var(--box-size));
+    justify-content: center;
+    gap: var(--cell-gap);
+
+    &:not(:last-of-type) {
+      margin-bottom: var(--cell-gap);
+    }
+  }
 
   &.four {
     --box-number: 4;
@@ -32,16 +39,21 @@
     --box-size: 2rem;
 
     mat-card:not(.bg-green):not(.bg-yellow):not(.bg-blue) {
-      filter: brightness(1.3);
+      filter: brightness(1.4);
     }
   }
 
-  &:not(.preview):not(.indicator)
-    > mat-card:hover:not(.bg-yellow):not(.bg-green) {
-    cursor: pointer;
+  &:not(.preview):not(.indicator) {
+    mat-card:focus-within {
+      outline: -webkit-focus-ring-color auto 1px;
+    }
 
-    filter: brightness(1.2);
-    --mat-card-elevated-container-elevation: var(--mat-sys-level3);
+    mat-card:hover:not(.bg-yellow):not(.bg-green) {
+      cursor: pointer;
+
+      filter: brightness(1.4);
+      --mat-card-elevated-container-elevation: var(--mat-sys-level3);
+    }
   }
 
   mat-card {
@@ -49,7 +61,7 @@
     justify-content: center;
     padding: 0.4rem;
 
-    div {
+    & > div > span {
       cursor: default;
       display: -webkit-box;
       -webkit-line-clamp: var(--box-max-lines);
@@ -60,7 +72,7 @@
   }
 
   /* ideally we could use css vars for controlling the breakpoints */
-  @container board-container (width < 35.5rem) {
+  @container board-container (width < 35rem) {
     &.five {
       --box-max-lines: 3;
     }
