--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -1,9 +1,34 @@
-@for (card of cards(); track idx; let idx = $index) {
-<mat-card
-  [class.bg-green]="card.IsBingo"
-  [class.bg-yellow]="!!card.CheckedDateUTC"
-  [class.bg-blue]="card.Selected"
-  (click)="checkCard(card)">
-  <div [matTooltip]="card.Name">{{ previewMode() === "indicator" ? "" : card.Name }}</div>
-</mat-card>
+@for (row of rows(); track row;) {
+<div role="row">
+  @for (card of cards().slice(row * mode(), (row * mode() + mode())); track idx; let idx = $index) {
+  @if (previewMode() === "indicator") {
+  <mat-card
+    [class.bg-green]="card.IsBingo"
+    [class.bg-yellow]="!!card.CheckedDateUTC"
+    [class.bg-blue]="card.Selected"></mat-card>
+  } @else { @let actualIdx = idx + (mode() * row);
+  <mat-card
+    [attr.aria-disabled]="!!card.CheckedDateUTC || previewMode()"
+    [class.bg-green]="card.IsBingo"
+    [class.bg-yellow]="!!card.CheckedDateUTC"
+    [class.bg-blue]="card.Selected"
+    (click)="checkCard(card)">
+    <div
+      role="gridcell"
+      [matTooltip]="card.Name"
+      [attr.aria-readonly]="!!card.CheckedDateUTC || previewMode()">
+      @if(!previewMode()) {
+      <input
+        class="cdk-visually-hidden"
+        type="checkbox"
+        name="task"
+        [attr.aria-labelledby]="'cell_' + actualIdx"
+        [disabled]="!!card.CheckedDateUTC"
+        [checked]="card.CheckedDateUTC || card.Selected" />
+      }
+      <span id="cell_{{actualIdx}}">{{ card.Name }}</span>
+    </div>
+  </mat-card>
+  } }
+</div>
 }
