--- a/apps/web-app/src/app/pages/board-page/board-page.html
+++ b/apps/web-app/src/app/pages/board-page/board-page.html
@@ -1,17 +1,17 @@
 <!-- prettier-ignore -->
 @let tooltips = { 
-    creator: "Board created by you",
+    creator: "Board created by you.",
     visible_local: "Local board, not visible or available for others and on other devices.",
     visible_unlisted: "Unlisted board, only visible to you and whoever you share the link with.",
     visible_public: "Public board, visible to those who visit your profile.",
     deadline_going: "The board has a deadline of",
     deadline_expired: "The board wasn't completed by",
-    deadline_none: "The board doesn't have a deadline",
+    deadline_none: "The board doesn't have a deadline.",
     grid_mode_grid: "Switch to list view",
     grid_mode_list: "Switch to grid view",
-    game_mode_bingo: "Bingo game mode. Get one strike.",
-    game_mode_todo: "TODO game mode. Check all cells.",
-    edit_button: "Edit button for changing the board name, game mode, deadline, deleting it and such.", 
+    game_mode_bingo: "Bingo game mode with the goal of reaching a vertical, horizontal or diagonal pattern from marked tasks.",
+    game_mode_todo: "TO-DO game mode with the goal of marking all tasks.",
+    edit_button: "Edit the board name, game mode, deadline or delete it.", 
 };
 @let switchTo = gridMode() === 'grid' ? 'list' : 'grid';
 @let buttonLabel = 'Switch to ' + switchTo + ' view';
@@ -19,18 +19,18 @@
 @let totalCells = board().Cells.length;
 
 <div>
-  <img
-    class="icon"
-    src="{{ board().GameMode === 'todo' ? 'todo' : 'bingo' }}.svg"
-    [matTooltip]="board().GameMode === 'todo' ? tooltips['game_mode_todo'] : tooltips['game_mode_bingo']"
-    alt="{{ board().GameMode === 'todo' ? tooltips['game_mode_todo'] : tooltips['game_mode_bingo'] }}" />
-
   <h1>{{ board().Name || "Untitled Board" }}</h1>
 
-  <div class="actions">
+  <menu aria-label="Edit and save actions" role="region">
     @if (pendingSelectCount() !== 0) {
-    <button mat-button (click)="unselect()">Unselect</button>
-    <button mat-flat-button (click)="saveSelected()">Save ({{ pendingSelectCount() }})</button>
+    <button mat-button (click)="unselect()">
+      Unselect
+      <span class="cdk-visually-hidden">all {{ pendingSelectCount() }} selected tasks</span>
+    </button>
+    <button mat-flat-button (click)="saveSelected()">
+      Save ({{ pendingSelectCount() }})
+      <span class="cdk-visually-hidden">selected tasks as done</span>
+    </button>
     } @else if (!editMode()) {
     <button
       matIconButton
@@ -40,14 +40,21 @@
       <mat-icon>edit</mat-icon>
     </button>
     } @else {
-    <button mat-button (click)="cancelChanges()">Cancel</button>
-    <button mat-flat-button (click)="saveChanges()">Save</button>
+    <button mat-button (click)="cancelChanges()">
+      Cancel<span class="cdk-visually-hidden"> changes</span>
+    </button>
+    <button mat-flat-button (click)="saveChanges()">
+      {{doDelete() ? 'Delete' : 'Save'}}
+      @if(doDelete()) {
+      <span class="cdk-visually-hidden"> board</span>
+      }
+    </button>
     }
-  </div>
+  </menu>
 </div>
 
 @if (editMode()) {
-<div class="edit">
+<section class="edit" aria-label="Game actions and game edit form">
   <app-board-details-form
     [isLoggedIn]="board().Visibility !== 'local'"
     [board]="board()"
@@ -60,10 +67,8 @@
   <button matButton disabled>Create copy</button>
 
   <mat-divider></mat-divider>
-</div>
-} 
-
-@if (goalReached()) {
+</section>
+} @if (goalReached()) {
 <div>
   @if (board().GameMode === 'traditional') { BINGO!
   <button matButton (click)="continueAfterBingo()">Continue in TODO mode</button>
@@ -76,85 +81,91 @@
   @if (!editMode()) {
   <ng-container *ngTemplateOutlet="boardInfo"></ng-container>
   }
-  <app-board [(cards)]="cells" [previewMode]="boardPreviewMode()"></app-board>
-  @if (gridMode() === 'list') {
-  <app-board-list-view [(cards)]="cells" [disabled]="editMode()"></app-board-list-view>
-  }
+  <section aria-label="Board">
+    <app-board [(cards)]="cells" [previewMode]="boardPreviewMode()"></app-board>
+    @if (gridMode() === 'list') {
+    <app-board-list-view [(cards)]="cells" [disabled]="editMode()"></app-board-list-view>
+    }
+  </section>
 </div>
 
-
-
 <ng-template #boardInfo>
-  <div [style.width]="'100%'">
+  <section [style.width]="'100%'" aria-label="Game information and toolbar">
     <!-- prettier-ignore -->
     <div>
-    <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['creator']"
-      >person</mat-icon>
-    <span class="cdk-visually-hidden">{{ tooltips["creator"] }}</span>
+      <img
+        src="{{ board().GameMode === 'todo' ? 'todo' : 'bingo' }}.svg"
+        [matTooltip]="board().GameMode === 'todo' ? tooltips['game_mode_todo'] : tooltips['game_mode_bingo']"
+        alt="{{ board().GameMode === 'todo' ? tooltips['game_mode_todo'] : tooltips['game_mode_bingo'] }}" />
 
-    @switch (board().Visibility) { 
-      @case ('local') {
-        <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_local']"
-        >visibility_off</mat-icon>
-        <span class="cdk-visually-hidden">{{ tooltips["visible_local"] }}</span>
-      } @case ('unlisted') {
-        <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_unlisted']"
-        >visibility_lock</mat-icon>
-        <span class="cdk-visually-hidden">{{ tooltips["visible_unlisted"] }}</span>
-      } @case ('public') {
-        <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_public']"
-        >visibility</mat-icon>
-        <span class="cdk-visually-hidden">{{ tooltips["visible_public"] }}</span>
-      }
-    }
-    
-    @switch ($any(deadline)) { 
-        @case ('pending') {
-          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_going']"
-            >hourglass_top</mat-icon>
-          <span class="cdk-visually-hidden">{{ tooltips["deadline_going"] }}</span>
-          } @case ('expired') {
-          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_expired']"
-            >hourglass_bottom</mat-icon>
-          <span class="cdk-visually-hidden">{{ tooltips["deadline_expired"] }}</span>
-          } @case ('none') {
-          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_none']"
-            >hourglass_disabled</mat-icon>
-          <span class="cdk-visually-hidden">{{ tooltips["deadline_none"] }}</span>
+      <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['creator']">person</mat-icon>
+      <span class="cdk-visually-hidden">{{ tooltips["creator"] }}</span>
+
+      @switch (board().Visibility) { 
+        @case ('local') {
+          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_local']"
+          >visibility_off</mat-icon>
+          <span class="cdk-visually-hidden">{{ tooltips["visible_local"] }}</span>
+        } @case ('unlisted') {
+          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_unlisted']"
+          >visibility_lock</mat-icon>
+          <span class="cdk-visually-hidden">{{ tooltips["visible_unlisted"] }}</span>
+        } @case ('public') {
+          <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['visible_public']"
+          >visibility</mat-icon>
+          <span class="cdk-visually-hidden">{{ tooltips["visible_public"] }}</span>
         }
-    }
+      }
+      
+      @switch ($any(deadline)) { 
+          @case ('pending') {
+            <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_going']"
+              >hourglass_top</mat-icon>
+            <span class="cdk-visually-hidden">{{ tooltips["deadline_going"] }}</span>
+            } @case ('expired') {
+            <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_expired']"
+              >hourglass_bottom</mat-icon>
+            <span class="cdk-visually-hidden">{{ tooltips["deadline_expired"] }}</span>
+            } @case ('none') {
+            <mat-icon fontSet="material-symbols-outlined" [matTooltip]="tooltips['deadline_none']"
+              >hourglass_disabled</mat-icon>
+            <span class="cdk-visually-hidden">{{ tooltips["deadline_none"] }}</span>
+          }
+      }
 
-  @if (goalReached()) {
-    <mat-icon fontSet="material-symbols-outlined" class="trophy" matTooltip="Goal reached"
-      >trophy</mat-icon>
-  } @else { 
-    <svg
-      matTooltip="{{ boardStats().checkedCells + '/' + totalCells + ' cells checked' }}"
-      viewBox="0 0 100 100"
-      width="24px"
-      height="24px"
-      style="--chart-green: {{ (boardStats().bingoCells / totalCells) * 360 }}deg;
-                --chart-yellow: {{ (boardStats().checkedCells / totalCells) * 360 }}deg;
-                --chart-blue: {{ ((boardStats().checkedCells + pendingSelectCount()) / totalCells) * 360 }}deg">
-      <defs>
-        <mask id="smallmask">
-          <circle cx="50" cy="50" r="45" fill="white" />
-          <circle cx="50" cy="50" r="30" />
-        </mask>
-      </defs>
+      @if (goalReached()) {
+        <mat-icon fontSet="material-symbols-outlined" class="trophy" matTooltip="Goal reached"
+          >trophy</mat-icon>
+      } @else { 
+        <svg
+          role="image"
+          [attr.aria-label]="boardStats().checkedCells + '/' + totalCells + ' tasks marked as done'"
+          matTooltip="{{ boardStats().checkedCells + '/' + totalCells + ' tasks marked as done' }}"
+          viewBox="0 0 100 100"
+          width="24px"
+          height="24px"
+          style="--chart-green: {{ (boardStats().bingoCells / totalCells) * 360 }}deg;
+                    --chart-yellow: {{ (boardStats().checkedCells / totalCells) * 360 }}deg;
+                    --chart-blue: {{ ((boardStats().checkedCells + pendingSelectCount()) / totalCells) * 360 }}deg">
+          <defs>
+            <mask id="smallmask">
+              <circle cx="50" cy="50" r="45" fill="white" />
+              <circle cx="50" cy="50" r="30" />
+            </mask>
+          </defs>
 
-      <foreignObject x="0" y="0" width="100" height="100" mask="url(#smallmask)">
-        <div class="gradient" xmlns="http://www.w3.org/1999/xhtml"></div>
-      </foreignObject>
-    </svg>
-    }
+          <foreignObject x="0" y="0" width="100" height="100" mask="url(#smallmask)">
+            <div class="gradient" xmlns="http://www.w3.org/1999/xhtml"></div>
+          </foreignObject>
+        </svg>
+      }
 
-    <button matIconButton disabled (click)="(null)">
-      <mat-icon>history</mat-icon>
-    </button>
-  </div>
+      <button matIconButton disabled (click)="(null)" aria-hidden="true">
+        <mat-icon>history</mat-icon>
+      </button>
+    </div>
 
-    <div class="actions">
+    <menu>
       <button
         [matTooltip]="buttonLabel"
         attr.aria-label="{{ buttonLabel }}"
@@ -162,6 +173,6 @@
         (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid')">
         <mat-icon>{{ gridMode() === "grid" ? "list" : "grid_on" }}</mat-icon>
       </button>
-    </div>
-  </div>
+    </menu>
+  </section>
 </ng-template>
